# distributedFileSystem

./: .gitignore
master/: CMakeLists.txt  main.cpp
master/headers/model/: error.hpp  file.hpp  slave.hpp
master/headers/network/: server.hpp
master/src/network/: server.cpp
